--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -15,3 +15,20 @@
         font-size: 1rem
         font-weight: 600
 
+@mixin border-tag-white
+    @media (min-width: 150px)
+        color: white
+        border: 1px solid black
+        display: flex
+        align-items: center
+        padding: 1px 8px 
+        font-weight: 600
+        border-radius: 4px
+    @media (min-width: 640px)
+        border: 1px solid white
+        height: 24px
+        padding: 4px 10px 
+        border-radius:4px
+        font-size: 1rem
+        font-weight: 600
+
