responsive pagina publicaciones movil

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,38 @@
 @import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @media (min-width: 150px) {
   .course {
     height: 100%;
@@ -70,7 +102,7 @@
   .card_container_top .course_route {
     border: 1px solid white;
     border-radius: 24px;
-    padding: 0.2rem 0.8rem 0.6rem 0.8rem;
+    padding: 0.2rem 1rem 0.6rem 0.8rem;
     transition: 200ms ease-in-out;
   }
   .card_container_top .course_route:hover {
@@ -485,17 +517,16 @@
     padding-left: 0px;
   }
   .papers .paper {
-    margin-top: 32px;
+    margin: 16px 0;
     display: flex;
     flex-direction: column;
+    border-bottom: #5441ff;
   }
   .papers .paper_main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 48px;
-    gap: 32px;
-    flex-grow: 1;
+    gap: 16px;
   }
   .papers .paper_main .paper_date {
     display: flex;
@@ -529,6 +560,10 @@
   .papers .paper_main .paper_title {
     @apply text-black;
   }
+  .papers .paper_main .paper_title h4 {
+    font-size: 1.2rem;
+    margin-bottom: 0.6rem;
+  }
   .papers .paper_main .paper_doi {
     font-weight: 600;
   }
@@ -536,11 +571,22 @@
     display: flex;
     flex-direction: row;
     align-content: center;
-    justify-content: right;
+    justify-content: left;
+  }
+  .papers .links a {
+    border: 1px solid #4f1be4;
+    border-radius: 24px;
+    padding: 0.5rem 1.2rem 0.7rem 1.4rem;
+    display: flex;
+    align-content: center;
+    margin-top: 16px;
   }
   .papers .links p {
     font-weight: 600;
-    text-decoration: underline;
+  }
+  .papers .links svg {
+    align-self: center;
+    margin-left: 0.6rem;
   }
 }
 @media (min-width: 600px) {
@@ -608,10 +654,6 @@
   }
 }
 @media (min-width: 600px) {
-  .papers .paper_main .paper_content {
-    gap: 32px;
-    flex-grow: 1;
-  }
   .papers .paper_main .paper_title {
     @apply text-black;
   }
@@ -717,6 +759,17 @@ ul {
 }
 ul li {
   margin: 0 1.3rem 0 0;
+}
+
+.article {
+  display: flex;
+}
+.article .article_content {
+  display: flex;
+  flex-direction: column;
+}
+.article .article_content .article_title {
+  font-weight: 700;
 }
 
 @media screen and (min-width: 641px) {
@@ -1882,7 +1935,7 @@ body :not(.menu) a:hover {
   .card_container_top .course_route {
     border: 1px solid white;
     border-radius: 24px;
-    padding: 0.2rem 0.8rem 0.6rem 0.8rem;
+    padding: 0.2rem 1rem 0.6rem 0.8rem;
     transition: 200ms ease-in-out;
   }
   .card_container_top .course_route:hover {
@@ -2352,17 +2405,16 @@ body :not(.menu) a:hover {
     padding-left: 0px;
   }
   .papers .paper {
-    margin-top: 32px;
+    margin: 16px 0;
     display: flex;
     flex-direction: column;
+    border-bottom: #5441ff;
   }
   .papers .paper_main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 48px;
-    gap: 32px;
-    flex-grow: 1;
+    gap: 16px;
   }
   .papers .paper_main .paper_date {
     display: flex;
@@ -2396,6 +2448,10 @@ body :not(.menu) a:hover {
   .papers .paper_main .paper_title {
     @apply text-black;
   }
+  .papers .paper_main .paper_title h4 {
+    font-size: 1.2rem;
+    margin-bottom: 0.6rem;
+  }
   .papers .paper_main .paper_doi {
     font-weight: 600;
   }
@@ -2403,11 +2459,22 @@ body :not(.menu) a:hover {
     display: flex;
     flex-direction: row;
     align-content: center;
-    justify-content: right;
+    justify-content: left;
+  }
+  .papers .links a {
+    border: 1px solid #4f1be4;
+    border-radius: 24px;
+    padding: 0.5rem 1.2rem 0.7rem 1.4rem;
+    display: flex;
+    align-content: center;
+    margin-top: 16px;
   }
   .papers .links p {
     font-weight: 600;
-    text-decoration: underline;
+  }
+  .papers .links svg {
+    align-self: center;
+    margin-left: 0.6rem;
   }
 }
 @media (min-width: 600px) {
@@ -2475,10 +2542,6 @@ body :not(.menu) a:hover {
   }
 }
 @media (min-width: 600px) {
-  .papers .paper_main .paper_content {
-    gap: 32px;
-    flex-grow: 1;
-  }
   .papers .paper_main .paper_title {
     @apply text-black;
   }
