--- a/app/sass/partials/_publications.sass
+++ b/app/sass/partials/_publications.sass
@@ -86,8 +86,8 @@
         .paper_main 
             display: flex
             flex-direction: column
-            justify-content: space-between
-            gap: 48px
+            //justify-content: space-between
+            // gap: 48px
             .paper_date
                 display: flex
                 h5
